--- a/EnlightenMobile/App.xaml
+++ b/EnlightenMobile/App.xaml
@@ -7,10 +7,8 @@
 			 x:Class="EnlightenMobile.App">
     <Application.Resources>
         <ResourceDictionary>
-            <!--Global Styles-->
-            <Color x:Key="NavigationPrimary">#2196F3</Color>
             <Style TargetType="NavigationPage">
-                <Setter Property="BarBackgroundColor" Value="{StaticResource NavigationPrimary}" />
+                <Setter Property="BarBackgroundColor" Value="#474747" />
                 <Setter Property="BarTextColor" Value="White" />
             </Style>
         </ResourceDictionary>
