--- a/EnlightenMobile/Views/MainPage.xaml
+++ b/EnlightenMobile/Views/MainPage.xaml
@@ -2,6 +2,12 @@
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:d="http://xamarin.com/schemas/2014/forms/design" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" xmlns:views="clr-namespace:EnlightenMobile.Views" x:Class="EnlightenMobile.Views.MainPage">
     <TabbedPage.Children>
 
+        <!--
+            Note that a NavigationPage.Title is not the same as the corresponding 
+            View (or ContentPage) Title.  On Android, the NavigationPage.Title
+            goes in the "tab" (so should be short), and the ContentPage.Title 
+            goes above it in the TabBar (so can be long).
+        -->
         <NavigationPage Title="About">
             <NavigationPage.Icon>
                 <OnPlatform x:TypeArguments="FileImageSource">
