--- a/EnlightenMobile/Views/SpectrometerSettingsView.xaml
+++ b/EnlightenMobile/Views/SpectrometerSettingsView.xaml
@@ -3,8 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              xmlns:vm="clr-namespace:EnlightenMobile.ViewModels"
              x:Class="EnlightenMobile.Views.SpectrometerSettingsView"
-             Title="️⚙️"
+             Title="{Binding title}"
              BackgroundColor="#fff">
+             <!-- Title="️⚙️" -->
 
     <ContentPage.BindingContext>
         <vm:SpectrometerSettingsViewModel/>
